--- a/pixi.toml
+++ b/pixi.toml
@@ -1,6 +1,6 @@
 [project] # TODO: move to pyproject.toml once pixi supports it
 name = "slim-trees"
-version = "0.2.2"
+version = "0.2.3"
 description = "A python package for efficient pickling of ML models."
 authors = ["Pavel Zwerschke <pavelzw@gmail.com>"]
 channels = ["conda-forge"]
@@ -17,7 +17,7 @@ lightgbm = ">=3.2,<4.1"
 numpy = "*"
 pre-commit = "*"
 pandas = "*"
-scikit-learn = "<1.3.0"
+scikit-learn = ">=1.1.0,<1.4"
 hatch = "*"
 pytest = ">=7.0"
 pytest-md = "*"
