--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "slim-trees"
 description = "A python package for efficient pickling of ML models."
-version = "0.2.2"
+version = "0.2.3"
 readme = "README.md"
 license = "MIT"
 requires-python = ">=3.8"
@@ -28,7 +28,7 @@ lightgbm = [
     "lightgbm >=3.2,<4.1",
 ]
 scikit-learn = [
-    "scikit-learn <1.3.0",
+    "scikit-learn >=1.1.0,<1.4",
 ]
 
 [project.urls]
