--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,10 +65,9 @@ jobs:
         PYTHON_VERSION: ['3.11']
     steps:
       - uses: actions/checkout@v4
-      # TODO: move to action once it is available
-      - name: Set up pixi
-        run: |
-          curl -fsSL https://raw.githubusercontent.com/prefix-dev/pixi/main/install/install.sh | bash
+      - uses: prefix-dev/setup-pixi@v0.2.0
+        with:
+          cache: true
       - name: Install dependencies
         run: |
           pixi install
