--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,13 +65,9 @@ jobs:
         PYTHON_VERSION: ['3.11']
     steps:
       - uses: actions/checkout@v4
-      # TODO: move to action once it is available
-      - name: Set up pixi
+      - uses: prefix-dev/setup-pixi@v0.2.0
+      - name: Install environment
         run: |
-          curl -fsSL https://raw.githubusercontent.com/prefix-dev/pixi/main/install/install.sh | bash
-      - name: Install dependencies
-        run: |
-          pixi install
           pixi run postinstall
       - name: Run unittests
         uses: pavelzw/pytest-action@v2
