Add support for lightgbm 4.2 (#100)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,13 +26,10 @@ jobs:
         with:
           name: artifact
           path: dist/*
-      - name: Make sure version in pyproject.toml and pixi.toml are in sync
-        run: |
-          [ "$(yq '.project.version' pixi.toml)" = "$(yq '.project.version' pyproject.toml)" ]
       - uses: Quantco/ui-actions/version-metadata@v1
         id: version-metadata
         with:
-          file: ./pixi.toml
+          file: ./pyproject.toml
           token: ${{ secrets.GITHUB_TOKEN }}
           version-extraction-override: 'regex:version = "(.*)"'
 
